unpackaged/main/default/objects/Lead/fields/Average_active_list_price__c.field-meta.xml
<CustomField>
    <fullName>Average_active_list_price__c</fullName>
    <label>(MLS) Average active list price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>