unpackaged/main/default/objects/Lead/fields/Brokerage_Agent_Count__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Agent_Count__c</fullName>
    <label>Brokerage/Team Agent Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>