unpackaged/main/default/objects/Lead/fields/Build_Your_Presence_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Build_Your_Presence_Webinar__c</fullName>
    <label>Build Your Presence Webinar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4.25.2024</fullName>
            </value>
            <value>
                <fullName>5.30.2024</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>