unpackaged/main/default/objects/Lead/fields/Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Call_Result__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Result</label>
    <type>Checkbox</type>
</CustomField>