unpackaged/main/default/objects/Lead/fields/Consecutive_calls_No_Contact__c.field-meta.xml
<CustomField>
    <fullName>Consecutive_calls_No_Contact__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Consecutive calls- No Contact</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>