unpackaged/main/default/objects/Lead/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Network member</fullName>
            </value>
            <value>
                <fullName>High brand value</fullName>
            </value>
            <value>
                <fullName>High contract value</fullName>
            </value>
            <value>
                <fullName>WSJ top 100 agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>