unpackaged/main/default/objects/Lead/fields/Date_Entered_Marketing_Qualified_Lead__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_Marketing_Qualified_Lead__c</fullName>
    <label>Date Entered Marketing Qualified Lead</label>
    <type>Date</type>
</CustomField>