unpackaged/main/default/objects/Lead/fields/Date_Entered_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_Opportunity__c</fullName>
    <label>Date Entered Opportunity</label>
    <type>Date</type>
</CustomField>