unpackaged/main/default/objects/Lead/fields/Engaging_Date__c.field-meta.xml
<CustomField>
    <fullName>Engaging_Date__c</fullName>
    <label>Engaging Date</label>
    <type>DateTime</type>
</CustomField>