unpackaged/main/default/objects/Lead/fields/Engaging_Notes__c.field-meta.xml
<CustomField>
    <fullName>Engaging_Notes__c</fullName>
    <label>Client Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>