unpackaged/main/default/objects/Lead/fields/Exclude_Hubspot__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Hubspot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Hubspot</label>
    <type>Checkbox</type>
</CustomField>