unpackaged/main/default/objects/Lead/fields/Geographic_Target_Area_Areas_Served__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Target_Area_Areas_Served__c</fullName>
    <label>Geographic Target Area/Areas Served</label>
    <type>TextArea</type>
</CustomField>