unpackaged/main/default/objects/Lead/fields/Hubspot_Last_activity_date__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Last_activity_date__c</fullName>
    <label>Hubspot Last activity date</label>
    <type>Date</type>
</CustomField>