unpackaged/main/default/objects/Lead/fields/Is_converted__c.field-meta.xml
<CustomField>
    <fullName>Is_converted__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is converted</label>
    <type>Checkbox</type>
</CustomField>