unpackaged/main/default/objects/Lead/fields/Last_Kubaru_Rep_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Kubaru_Rep_Assigned_Date__c</fullName>
    <label>Last Kubaru Rep Assigned Date</label>
    <type>Date</type>
</CustomField>