unpackaged/main/default/objects/Lead/fields/Last_Page_Seen__c.field-meta.xml
<CustomField>
    <fullName>Last_Page_Seen__c</fullName>
    <label>Last Page Seen</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>