unpackaged/main/default/objects/Lead/fields/Latest_Source_Drill_Down_1__c.field-meta.xml
<CustomField>
    <fullName>Latest_Source_Drill_Down_1__c</fullName>
    <label>Latest Source Drill-Down 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>