unpackaged/main/default/objects/Lead/fields/Lead_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead 18 Digit ID</label>
    <type>Text</type>
</CustomField>