unpackaged/main/default/objects/Lead/fields/Lead_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Brokerage__c</fullName>
    <label>Brokerage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>