unpackaged/main/default/objects/Lead/fields/LEAD_ID_MERGE_LOG__c.field-meta.xml
<CustomField>
    <fullName>LEAD_ID_MERGE_LOG__c</fullName>
    <label>LEAD_ID_MERGE_LOG</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>