unpackaged/main/default/objects/Lead/fields/Lead_Source_Original__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Original__c</fullName>
    <label>Lead Source-Original</label>
    <length>50</length>
    <type>Text</type>
</CustomField>