unpackaged/main/default/objects/Lead/fields/Lead_Source_Subtype_1__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Subtype_1__c</fullName>
    <label>Lead Source - Subtype 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>