unpackaged/main/default/objects/Lead/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <label>License #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>