unpackaged/main/default/objects/Lead/fields/Lifecycle_stage_date_stamp__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_stage_date_stamp__c</fullName>
    <label>Lifecycle stage date stamp</label>
    <type>Date</type>
</CustomField>