unpackaged/main/default/objects/Lead/fields/Linkedin_Ads__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Ads__c</fullName>
    <label>Linkedin Ads</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>