unpackaged/main/default/objects/Lead/fields/LP_Site_Reference__c.field-meta.xml
<CustomField>
    <fullName>LP_Site_Reference__c</fullName>
    <inlineHelpText>Is there an LP site they referenced that they liked?</inlineHelpText>
    <label>LP Site Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>