unpackaged/main/default/objects/Lead/fields/Marketing_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Advisor__c</fullName>
    <label>Marketing Advisor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compass MA</fullName>
            </value>
            <value>
                <fullName>Corcoran MA</fullName>
            </value>
            <value>
                <fullName>Sotheby&#39;s Int Realty MA</fullName>
            </value>
            <value>
                <fullName>Coldwell Banker MA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>