unpackaged/main/default/objects/Lead/fields/metro_area_name__c.field-meta.xml
<CustomField>
    <fullName>metro_area_name__c</fullName>
    <label>Metro Area Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>