unpackaged/main/default/objects/Lead/fields/MLS_AGENT_MASTER_KEY_MERGE_LOG__c.field-meta.xml
<CustomField>
    <fullName>MLS_AGENT_MASTER_KEY_MERGE_LOG__c</fullName>
    <label>MLS_AGENT_MASTER_KEY_MERGE_LOG</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>