unpackaged/main/default/objects/Lead/fields/MLS_MLS_Lead_Category__c.field-meta.xml
<CustomField>
    <fullName>MLS_MLS_Lead_Category__c</fullName>
    <formula>IF(
Prior_12_months_total_transaction_value__c &gt; 14999999, &quot;Mid-Market&quot;,

IF(

AND(Prior_12_months_total_transaction_value__c &gt; 4999999 , Prior_12_months_total_transaction_value__c &lt; 14999999), &quot;General&quot;,

IF(

AND(Prior_12_months_total_transaction_value__c &gt; 2999999, Prior_12_months_total_transaction_value__c &lt; 4999999), &quot;Training&quot;,

IF(
AND(Prior_12_months_total_transaction_value__c &gt; 0, Prior_12_months_total_transaction_value__c &lt; 2999999), &quot;Do not Call&quot;,

&quot;&quot;

)

)
)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(MLS) MLS Lead Category</label>
    <type>Text</type>
</CustomField>