unpackaged/main/default/objects/Lead/fields/MLS_office_master_key__c.field-meta.xml
<CustomField>
    <fullName>MLS_office_master_key__c</fullName>
    <label>(MLS) MLS office master key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>