unpackaged/main/default/objects/Lead/fields/Network_Member__c.field-meta.xml
<CustomField>
    <fullName>Network_Member__c</fullName>
    <label>Network Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>