unpackaged/main/default/objects/Lead/fields/Non_Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Non_Converted_Date__c</fullName>
    <label>Non-Converted Date</label>
    <type>DateTime</type>
</CustomField>