unpackaged/main/default/objects/Lead/fields/Now_in_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Now_in_Sequence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Now in Sequence</label>
    <type>Checkbox</type>
</CustomField>