unpackaged/main/default/objects/Lead/fields/Number_of_times_assigned_by_Kubaru__c.field-meta.xml
<CustomField>
    <fullName>Number_of_times_assigned_by_Kubaru__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of times assigned by Kubaru</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>