unpackaged/main/default/objects/Lead/fields/Number_of_times_dialed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_times_dialed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of times dialed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>