unpackaged/main/default/objects/Lead/fields/Organic_Partner_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Organic_Partner_Inquiry__c</fullName>
    <label>Organic Partner Inquiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>