unpackaged/main/default/objects/Lead/fields/Original_UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>Original_UTM_Medium__c</fullName>
    <label>Original UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>