unpackaged/main/default/objects/Lead/fields/Original_UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>Original_UTM_Term__c</fullName>
    <label>Original UTM Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>