unpackaged/main/default/objects/Lead/fields/Other_Source_1__c.field-meta.xml
<CustomField>
    <fullName>Other_Source_1__c</fullName>
    <label>Other Source 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>