unpackaged/main/default/objects/Lead/fields/Owned_by_a_Queue__c.field-meta.xml
<CustomField>
    <fullName>Owned_by_a_Queue__c</fullName>
    <description>used by Hubspot for routing &amp; assignment</description>
    <formula>!IsBlank (Owner:Queue.Id)

/*
How do I know if a case owner is queue or user?

The system will auto-generate two fields – Owner (Group/Queue) and Owner (User). If the owner is a queue, the Owner (Group/Queue) Id will have the queue Id and the Owner (User) Id will stay null. If the owner is a user then vice versa.

*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>used by Hubspot for routing &amp; assignment</inlineHelpText>
    <label>Owned by a Queue</label>
    <type>Checkbox</type>
</CustomField>