unpackaged/main/default/objects/Lead/fields/Partnership_Organization__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Organization__c</fullName>
    <label>Partnership Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compass</fullName>
            </value>
            <value>
                <fullName>Sotheby&#39;s International Realty</fullName>
            </value>
            <value>
                <fullName>Sotheby&#39;s Int Realty Affiliate</fullName>
            </value>
            <value>
                <fullName>Coldwell Banker Realty</fullName>
            </value>
            <value>
                <fullName>Coldwell Banker Affiliate</fullName>
            </value>
            <value>
                <fullName>Corcoran</fullName>
            </value>
            <value>
                <fullName>Corcoran Affiliate</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>@ Properties</fullName>
            </value>
            <value>
                <fullName>Harvery Kalles</fullName>
            </value>
            <value>
                <fullName>Pinnacle Realty Advisors</fullName>
            </value>
            <value>
                <fullName>The Agency</fullName>
            </value>
            <value>
                <fullName>Big Block Realty</fullName>
            </value>
            <value>
                <fullName>Radius Agent</fullName>
            </value>
            <value>
                <fullName>LoKation Real Estate</fullName>
            </value>
            <value>
                <fullName>eXP Luxury</fullName>
            </value>
            <value>
                <fullName>JPAR</fullName>
            </value>
            <value>
                <fullName>The Remax Collection</fullName>
            </value>
            <value>
                <fullName>William Raveis</fullName>
            </value>
            <value>
                <fullName>Real RE</fullName>
            </value>
            <value>
                <fullName>Harcourts North America</fullName>
            </value>
            <value>
                <fullName>Avenue 8</fullName>
            </value>
            <value>
                <fullName>Bluegrass</fullName>
            </value>
            <value>
                <fullName>The Serhant Team</fullName>
            </value>
            <value>
                <fullName>Side</fullName>
            </value>
            <value>
                <fullName>Milehimodern</fullName>
            </value>
            <value>
                <fullName>Howard Hanna</fullName>
            </value>
            <value>
                <fullName>California Concierge</fullName>
            </value>
            <value>
                <fullName>Realty ONE Group</fullName>
            </value>
            <value>
                <fullName>Luxury Poerfolio International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>