unpackaged/main/default/objects/Lead/fields/Primary_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reason__c</fullName>
    <label>Release Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Release_Outcome__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost Momentum</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Rep Not Interested</fullName>
            </value>
            <value>
                <fullName>Current Client</fullName>
            </value>
            <value>
                <fullName>DNC</fullName>
            </value>
            <value>
                <fullName>Not in Business</fullName>
            </value>
            <value>
                <fullName>Agent Not Interested</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
                <isActive>false</isActive>
                <label>Budget</label>
            </value>
            <value>
                <fullName>Don’t think it will work</fullName>
                <isActive>false</isActive>
                <label>Don’t think it will work</label>
            </value>
            <value>
                <fullName>Features</fullName>
                <isActive>false</isActive>
                <label>Features</label>
            </value>
            <value>
                <fullName>Partner/Spouse</fullName>
                <isActive>false</isActive>
                <label>Partner/Spouse</label>
            </value>
            <value>
                <fullName>Poorly Qualified</fullName>
                <isActive>false</isActive>
                <label>Poorly Qualified</label>
            </value>
            <value>
                <fullName>Pricing</fullName>
                <isActive>false</isActive>
                <label>Pricing</label>
            </value>
            <value>
                <fullName>Reputation</fullName>
                <isActive>false</isActive>
                <label>Reputation</label>
            </value>
            <value>
                <fullName>Timing</fullName>
                <isActive>false</isActive>
                <label>Timing</label>
            </value>
            <value>
                <fullName>Tracking Number</fullName>
                <isActive>false</isActive>
                <label>Tracking Number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>