unpackaged/main/default/objects/Lead/fields/Prior_12_months_average_price__c.field-meta.xml
<CustomField>
    <fullName>Prior_12_months_average_price__c</fullName>
    <formula>Prior_12_months_total_transaction_value__c  /  Prior_12_months_total_listings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(MLS) Prior 12 months average price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>