unpackaged/main/default/objects/Lead/fields/Prior_12_months_total_transaction_value__c.field-meta.xml
<CustomField>
    <fullName>Prior_12_months_total_transaction_value__c</fullName>
    <formula>Prior_12_months_sold_transaction_value__c +  Prior_12_months_buyer_transaction_value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(MLS) Prior 12 m total transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>