unpackaged/main/default/objects/Lead/fields/Pursuing_Date__c.field-meta.xml
<CustomField>
    <fullName>Pursuing_Date__c</fullName>
    <label>Pursuing Date</label>
    <type>DateTime</type>
</CustomField>