unpackaged/main/default/objects/Lead/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <formula>IF(

OR( OwnerId =  &quot;00GO90000001VWPMA2&quot; ,  OwnerId =  $Label.ID_Queue_Partners  ), true, false


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queue?</label>
    <type>Checkbox</type>
</CustomField>