unpackaged/main/default/objects/Lead/fields/Ready_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_Date__c</fullName>
    <label>Ready Date</label>
    <type>DateTime</type>
</CustomField>