unpackaged/main/default/objects/Lead/fields/Release_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Release_Outcome__c</fullName>
    <label>Release Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Disqualify</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>