unpackaged/main/default/objects/Lead/fields/Release_Reason__c.field-meta.xml
<CustomField>
    <fullName>Release_Reason__c</fullName>
    <label>Dialpad Release Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Poorly Qualified</fullName>
            </value>
            <value>
                <fullName>Lost Momentum</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Tracking Number</fullName>
            </value>
            <value>
                <fullName>Rep Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>