unpackaged/main/default/objects/Lead/fields/Rep_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Rep_Assigned_Date__c</fullName>
    <label>Rep Assigned Date</label>
    <type>DateTime</type>
</CustomField>