unpackaged/main/default/objects/Lead/fields/Rep_Assigned_Date_Days__c.field-meta.xml
<CustomField>
    <fullName>Rep_Assigned_Date_Days__c</fullName>
    <formula>TODAY() -  DATEVALUE(Rep_Assigned_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep Assigned Date Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>