unpackaged/main/default/objects/Lead/fields/Rolling_yoy_growth_rate__c.field-meta.xml
<CustomField>
    <fullName>Rolling_yoy_growth_rate__c</fullName>
    <label>(MLS) Rolling yoy growth rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>